--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
+    "body-parser": "^1.15.2",
     "compression": "^1.6.2",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-alpha.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "express-react-views": "^0.10.2",
